--- a/index.html
+++ b/index.html
@@ -713,10 +713,10 @@
         <form action="#" method="post" role="form" class="php-email-form">
           <div class="row gy-4">
             <div class="col-lg-4 col-md-6">
-              <input type="text" name="date" class="form-control" id="date" placeholder="Дата" required="">
+              <input type="text" name="date" class="form-control date" id="date" placeholder="Дата" required="">
             </div>
             <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control" name="time" id="time" placeholder="Время" required="">
+              <input type="text" class="form-control time" name="time" id="time" placeholder="Время" required="">
             </div>
             <div class="col-lg-4 col-md-6">
               <input type="text" class="form-control" name="table" id="table" placeholder="Стол" readonly required>
@@ -1442,9 +1442,9 @@
         </div>
         <h5 class="date-modal-title">Забронировать стол</h5>
         <form action="#" method="post" role="form" class="date-modal-form">
-            <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
-            <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
-            <input type="text" class="form-control" name="table" id="table-modal" placeholder="cтол" readonly required>
+            <input type="text" name="date" class="form-control date" id="date" placeholder="Дата" required="">
+            <input type="text" class="form-control time" name="time" id="time" placeholder="Время" required="">
+            <input type="text" class="form-control" name="table" id="table-modal" placeholder="Стол" readonly required>
             <button class="date-modal-btn">Забронировать</button>
         </form>
       </div>
