--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"/>
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +26,6 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 
   <!-- Main CSS File -->
@@ -713,7 +715,7 @@
         <form action="#" method="post" role="form" class="php-email-form">
           <div class="row gy-4">
             <div class="col-lg-4 col-md-6">
-              <input type="text" name="date" class="form-control date" id="date" placeholder="Дата" required="">
+              <input type="text" class="form-control date" name="date"  id="date" placeholder="Дата" required="">
             </div>
             <div class="col-lg-4 col-md-6">
               <input type="text" class="form-control time" name="time" id="time" placeholder="Время" required="">
@@ -1442,9 +1444,9 @@
         </div>
         <h5 class="date-modal-title">Забронировать стол</h5>
         <form action="#" method="post" role="form" class="date-modal-form">
-            <input type="text" name="date" class="form-control date" id="date" placeholder="Дата" required="">
-            <input type="text" class="form-control time" name="time" id="time" placeholder="Время" required="">
-            <input type="text" class="form-control" name="table" id="table-modal" placeholder="Стол" readonly required>
+            <input type="text" class="form-control date" name="date-modal" id="date-modal" placeholder="Дата" required="">
+            <input type="text" class="form-control time" name="time-modal" id="time-modal" placeholder="Время" required="">
+            <input type="text" class="form-control" name="table-modal" id="table-modal" placeholder="Стол" readonly required>
             <button class="date-modal-btn">Забронировать</button>
         </form>
       </div>
