--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"/>
+  
+  <!-- flatpickr -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"/> -->
+
+  <!-- clockpicker -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/clockpicker/dist/bootstrap-clockpicker.min.css"> -->
+
+  <!-- MDTimePicker -->
+  <link rel="stylesheet" href="./assets/vendor/MDTimePicker/dist/mdtimepicker.min.css">
+  
 
 
   <!-- Vendor CSS Files -->
@@ -718,7 +728,7 @@
               <input type="text" class="form-control date" name="date"  id="date" placeholder="Дата" required="">
             </div>
             <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control time" name="time" id="time" placeholder="Время" required="">
+              <input type="time" class="form-control time" name="time" id="time" placeholder="Время" required="">
             </div>
             <div class="col-lg-4 col-md-6">
               <input type="text" class="form-control" name="table" id="table" placeholder="Стол" readonly required>
@@ -1443,12 +1453,12 @@
           </svg>
         </div>
         <h5 class="date-modal-title">Забронировать стол</h5>
-        <form action="#" method="post" role="form" class="date-modal-form">
+        <!-- <form action="#" method="post" role="form" class="date-modal-form">
             <input type="text" class="form-control date" name="date-modal" id="date-modal" placeholder="Дата" required="">
             <input type="text" class="form-control time" name="time-modal" id="time-modal" placeholder="Время" required="">
             <input type="text" class="form-control" name="table-modal" id="table-modal" placeholder="Стол" readonly required>
             <button class="date-modal-btn">Забронировать</button>
-        </form>
+        </form> -->
       </div>
   </div>
 
@@ -1524,8 +1534,20 @@
 
 
   <!-- Vendor JS Files -->
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js"></script>
+
+
+  <!-- flatpickr -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js"></script> -->
+
+  <!-- clockpicker -->
+  <!-- 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/clockpicker/dist/bootstrap-clockpicker.min.js"></script> -->
+  
+  <script src="./assets/vendor/MDTimePicker/dist/mdtimepicker.min.js"></script>
+
 
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=5e179056-2391-4e15-8915-d8b9b971ae59" type="text/javascript"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
