--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         <form action="#" method="post" role="form" class="php-email-form">
           <div class="row gy-4">
             <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control date" name="date"  id="date" placeholder="Дата" required="">
+              <input type="date" class="form-control date" name="date"  id="date" placeholder="Дата" required="">
             </div>
             <div class="col-lg-4 col-md-6">
               <input type="time" class="form-control time" name="time" id="time" placeholder="Время" required="">
