--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   
   <!-- flatpickr -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"/>
+  <link rel="stylesheet" href="./assets/vendor/flatpickr/flatpickr.min.css"/>
 
   <!-- clockpicker -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -28,7 +28,7 @@
   <!-- MDTimePicker -->
   <!-- <link rel="stylesheet" href="./assets/vendor/MDTimePicker/dist/mdtimepicker.min.css"> -->
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dmuy/MDTimePicker@v1.0.2-rc2/mdtimepicker.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dmuy/MDTimePicker@v1.0.2-rc2/mdtimepicker.min.css"> -->
 
 
 
@@ -1455,12 +1455,12 @@
           </svg>
         </div>
         <h5 class="date-modal-title">Забронировать стол</h5>
-        <!-- <form action="#" method="post" role="form" class="date-modal-form">
+        <form action="#" method="post" role="form" class="date-modal-form">
             <input type="text" class="form-control date" name="date-modal" id="date-modal" placeholder="Дата" required="">
             <input type="text" class="form-control time" name="time-modal" id="time-modal" placeholder="Время" required="">
             <input type="text" class="form-control" name="table-modal" id="table-modal" placeholder="Стол" readonly required>
             <button class="date-modal-btn">Забронировать</button>
-        </form> -->
+        </form>
       </div>
   </div>
 
@@ -1537,7 +1537,6 @@
 
   <!-- Vendor JS Files -->
 
-
   <!-- flatpickr -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js"></script> -->
@@ -1550,10 +1549,11 @@
   
   <!-- <script src="./assets/vendor/MDTimePicker/dist/mdtimepicker.min.js"></script> -->
 
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/dmuy/MDTimePicker@v1.0.2-rc2/mdtimepicker.min.js"></script>
+  <script src="./assets/vendor/flatpickr/flatpickr.js"></script>
+  <script src="./assets/vendor/flatpickr/ru.js"></script>
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dmuy/MDTimePicker@v1.0.2-rc2/mdtimepicker.min.js"></script> -->
  
 
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=5e179056-2391-4e15-8915-d8b9b971ae59" type="text/javascript"></script>
@@ -1566,10 +1566,6 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  
-
-  
-
   <script src="assets/js/main.js"></script>
 </body>
 
